--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ org.gradle.jvmargs=-Xms128m -Xmx1500m
 org.gradle.configureondemand=true
 org.gradle.parallel=true
 org.gradle.caching=true
+kotlin.incremental.useClasspathSnapshot=true
